layout updates, spacing's updates, bugfixings, title changes and link change and fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -554,7 +554,86 @@ body.overflow-hidden #mobile-menu {
 .w-12 {
   width: 3rem;
 }
-
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+.mt-7{
+  margin-top: 1.75rem;
+}
+.mt-5{
+  margin-top: 1.25rem;
+}
 .h-12 {
   height: 3rem;
+}
+.mt-6{
+  margin-top: 1.5rem;
+}
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+.pl-4 {
+  padding-left: 1rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pl-1 {
+  padding-left: 0.25rem;
+}
+.pr-6 {
+  padding-right: 1.5rem;
+}
+.pr-4 {
+  padding-right: 1rem;
+}
+.pr-2 {
+  padding-right: 0.5rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pr-1 {
+  padding-right: 0.25rem;
+}
+.pl-0 {
+  padding-left: 0;
+}
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
+}
+.pt-3 {
+  padding-top: 0.75rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
+}
+.pt-1 {
+  padding-top: 0.25rem;
+}
+.block {
+  display: block;
+}
+.m-auto {
+  margin: auto;
+}
+.w-300{
+  width: 300px;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+@media (min-width: 768px) {
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
